tests/snapshots/examples_fixtures/type_system__failing__197_effect_row_subtract_unresolved_multi_e420.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/197_effect_row_subtract_unresolved_multi_e420.flx
== compile ==
failed (compile)
== diagnostics ==
error[E304]: Invalid Effect Row

Cannot interpret this effect row: `e` and `t` are distinct row variables in the same row.

  examples/type_system/failing/197_effect_row_subtract_unresolved_multi_e420.flx:28:41
   |
28 | fn unresolved_many(x: Int) -> Int with |e - IO, |t - Time {
   |                                         ^^^^^^
   |                                         ------ conflicting row variables in this effect row

Hint:
  Use a single row variable per `with ...` clause (for example `|e` instead of `|e, |f`).


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
== stdout ==
<not executed>
